--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/specialDays.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/specialDays.html.twig
@@ -1,4 +1,4 @@
-{# src/Busybee/InstituteBundle/Resources/views/Calendar/terms.html.twig #}
+{# src/Busybee/InstituteBundle/Resources/views/Calendar/specialDays.html.twig #}
 
 {% trans_default_domain "BusybeeInstituteBundle" %}
 
@@ -6,7 +6,7 @@
 
 <div class="panel panel-primary busybee-panel">
 	<div class="panel-heading">
-		<h3 class="panel-title">{{ 'calendar.term.title'|trans({'%year%': form.name.vars.value}) }}
+		<h3 class="panel-title">{{ 'calendar.specialDay.title'|trans({'%year%': form.name.vars.value}) }}
 		<button title="{{ 'calendar.year.return'|trans}}" type="button" class="halflings halflings-hand-left btn btn-primary" onClick="window.open('{{ path('calendar_years') }}','_self')" style="float: right"></button>
 		{% if id != 'Add' %}
 			<button title="{{ 'year.add.title'|trans}}" type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('year_edit', {'id': 'Add'}) }}','_self')" style="float: right"></button>
@@ -16,14 +16,16 @@
 		</h3>
 	</div>
 	<div class="panel-body">
-		{% for term in form.terms %}
-			{% if term.vars.name != '__name__' %}
-				{% include 'BusybeeInstituteBundle:Calendar:term.html.twig' with {'form': term} %}
+		{% for specialKey, specialDay in form.specialDays %}
+			{% if specialDay.vars.name != '__name__' %}
+				{% include 'BusybeeInstituteBundle:Calendar:specialDay.html.twig' with {'form': specialDay, 'key': specialKey} %}
 			{% endif %}
 		{% endfor %}
-		{% include 'BusybeeInstituteBundle:Calendar:term.html.twig' with {'form': form.terms.vars.prototype} %}
-		<p class="alert alert-info">{{ 'calendar.help.terms'|trans }}</p>
+		{% include 'BusybeeInstituteBundle:Calendar:specialDay.html.twig' with {'form': form.specialDays.vars.prototype, 'key': '__name__'} %}
+		{% if 'calendar.help.specialDays'|trans is not empty %}
+			<p class="alert alert-info">{{ 'calendar.help.specialDays'|trans }}</p>
+		{% endif %}
 	</div>
 </div>
 
-{% do form.terms.setRendered %}
+{% do form.specialDays.setRendered %}
