--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
@@ -7,7 +7,11 @@
 
 		<div class="panel panel-info busybee-panel">
 			<div class="panel-heading">
-				<h3 class="panel-title">{% if form.name.vars.value is empty %}{{ 'term.add'|trans}}{% else %}{{ form.name.vars.value }}{% endif %}</h3>
+				<h3 class="panel-title">{% if form.name.vars.value is empty %}{{ 'term.add'|trans}}{% else %}{{ form.name.vars.value }}{% endif %}
+				{% if form.vars.value.id is defined and form.vars.value.canDelete() %}
+					<button title='{{ 'term.delete.title'|trans}}' type="button" class="halflings halflings-erase btn btn-danger" onclick="confirmTermDelete('{{ path('term_delete', {'id': form.vars.value.id, 'year': id}) }}')" style="float: right ; "></button>
+				{% endif %}
+				</h3>
 			</div>
 			<div class="panel-body">
 				<div class="container-fluid">
