--- a/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/template.html.twig
@@ -38,7 +38,7 @@
 
 		{{ include('BusybeeHomeBundle:Default:flash.html.twig') }}
 	
-		<div class="container-fuild" id="contentContainer">
+		<div class="container-fluid" id="contentContainer">
 		{% block contentContainer %}
 	
 		{{ include('BusybeeHomeBundle:Default:buttons.html.twig') }}
