--- a/src/Busybee/HomeBundle/Resources/views/Default/style.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/style.html.twig
@@ -4,3 +4,9 @@
 	<link href="{{ asset('css/glyphicons.css') }}" type="text/css" rel="stylesheet" />
 	<link href="{{ asset('css/glyphicons-halflings.css') }}" type="text/css" rel="stylesheet" />
 	<link href="{{ asset('css/main.css') }}" type="text/css" rel="stylesheet" />
+
+<style  type="text/css">
+body {
+	background-image: url({{ absolute_url(asset(get_setting('Background.Image', 'img/backgroundPage.jpg'))) }}) ;
+}
+</style>
