--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/style.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/style.html.twig
@@ -33,7 +33,7 @@
 	background-repeat: no-repeat ;
 	background-size: 400px ;
 	background-image: url({{ absolute_url(asset('img/bee-transparent.png')) }}) ;
-	borber: none ;
+	border: none ;
 }
 .calendarWeek>td {
 	border: 1px solid #333;
