--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/year.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/year.html.twig
@@ -7,12 +7,7 @@
 <div class="panel panel-primary busybee-panel">
 	<div class="panel-heading">
 		<h3 class="panel-title">{{ 'calendar.year.title'|trans}}
-		<button title='{{ 'calendar.year.return'|trans}}' type="button" class="halflings halflings-hand-left btn btn-primary" onClick="window.open('{{ path('calendar_years') }}','_self')" style="float: right"></button>
-		{% if id != 'Add' %}
-			<button title='{{ 'year.add.title'|trans}}' type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('year_edit', {'id': 'Add'}) }}','_self')" style="float: right"></button>
-		{% endif %}
-		<button title='{{ 'form.reset.button'|trans({}, 'BusybeeHomeBundle') }}' type="button" onClick="location.href='{{ path('year_edit', {'id': id}) }}'" class="halflings halflings-remove-circle btn btn-info" style="float: right"></button>
-		<button title='{{ 'form.save'|trans({}, 'BusybeeHomeBundle')}}' type="submit" class="halflings halflings-save btn btn-success" style="float: right"></button>
+		{% include 'BusybeeInstituteBundle:Calendar:calendarMenu.html.twig' %}
 		</h3>
 	</div>
 	<div class="panel-body">
@@ -32,5 +27,6 @@
 				</div>
 			</div>
 		</div>
+		{% include 'BusybeeInstituteBundle:Calendar:calendarMenu.html.twig' %}
 	</div>
 </div>
