Campus Resource Development
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -204,3 +204,10 @@ img.imageWidth200 {
 	margin-left: 6px;
 	width: 200px;
 }
+.changeRecord {
+	float: right;
+	width: 300px;
+	margin-top: -25px;
+	height: 28px;
+	font-weight: normal ;
+}
