Home Room Integration

--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarView.pdf.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarView.pdf.twig
@@ -90,7 +90,7 @@ tr {
 					<tbody class="days">
 					<tr class="calendarWeek">
 						<td><strong>{{ 'Wk'|trans }}</strong></td>
-						{% for week_name in calendar.weekShortNames %}
+						{% for week_name in calendar.weeknameShorts %}
 							<td class="dayBold">
 								{{ week_name|trans }}
 							</td>
