--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
@@ -20,7 +20,7 @@
 							{{ form_row(form.name) }}
 						</div>
 						<div class="col-sm-2 well">
-							{{ form_row(form.shortName) }}
+							{{ form_row(form.nameShort) }}
 						</div>
 						<div class="col-sm-3 well">
 							{{ form_row(form.firstDay) }}
