--- a/src/Busybee/FormBundle/Resources/views/Template/bootstrap.html.twig
+++ b/src/Busybee/FormBundle/Resources/views/Template/bootstrap.html.twig
@@ -3,6 +3,9 @@
 {% block form_label -%}
 	{% if 'image' in block_prefixes and data.pathname is defined and data.pathname is not empty %}<img src="{{ asset( data.pathname ) }}" class="{{ attr.imageClass }}" />{% endif %}
     {%- set label_attr = label_attr|merge({class: (label_attr.class|default('') ~ ' control-label')|trim}) -%}
+    {% if 'url' in block_prefixes and value is not empty %}
+        <button title='{{ label|trans({}, translation_domain ) }}' type="button" class="x075 halflings halflings-link btn btn-default" onClick="window.open('{{ value }}','_blank')"></button>
+    {%  endif %}
     {{- parent() -}}
 {%- endblock form_label %}
 
@@ -16,9 +19,11 @@
     </ul>
     {% if form.parent %}</span>{% else %}</div>{% endif %}
     {%- endif %}
+    {% set required_printed = false %}<br />
 	{% for attrname,attrvalue in attr %}
-		{% if attrname == 'help' %}
-			<br /><span class="field-help">{{ (translation_domain is same as(false) ? attrvalue : attrvalue|trans({}, translation_domain)) }}</span>
+        {% if required and not required_printed %}<span class="field-required">{{ 'required'|trans({}, 'BusybeeHomeBundle') }} </span> {% set required_printed = true %}{% endif %}
+        {% if attrname == 'help' %}
+           <span class="field-help">{{ (translation_domain is same as(false) ? attrvalue : attrvalue|trans({}, translation_domain)) }}</span>
 		{% endif %}
 	{% endfor %}
 {%- endblock form_errors %}
