--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarView.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarView.html.twig
@@ -26,7 +26,7 @@
 					</tr>
 					<tr class="calendarWeek">
 						<td><strong>{{ 'Wk'|trans }}</strong></td>
-						{% for week_name in calendar.weekShortNames %}
+						{% for week_name in calendar.weeknameShorts %}
 							<td class="dayBold">
 								{{ week_name|trans }}
 							</td>
