--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
@@ -9,8 +9,12 @@
 			<div class="panel-heading">
 				<h3 class="panel-title">{% if form.name.vars.value is empty %}{{ 'term.add'|trans}}{% else %}{{ form.name.vars.value }}{% endif %}
 				{% if form.vars.value.id is defined and form.vars.value.canDelete() %}
-					<button title='{{ 'term.delete.title'|trans}}' type="button" class="halflings halflings-erase btn btn-danger" onclick="confirmTermDelete('{{ path('term_delete', {'id': form.vars.value.id, 'year': id}) }}')" style="float: right ; "></button>
-				{% endif %}
+					<button title="{{ 'term.delete.title'|trans}}" type="button" class="halflings halflings-erase btn btn-danger" onclick="confirmTermDelete('{{ path('term_delete', {'id': form.vars.value.id, 'year': id}) }}')" style="float: right ; "></button>
+					<button title="{{ 'term.add'|trans}}" type="button" class="halflings halflings-plus-sign btn btn-info addTermButton" style="float: right"></button>
+				{% else %}
+					<button title="{{ 'term.delete.title'|trans}}" type="button" class="halflings halflings-erase btn btn-danger" id="deleteTermButton" style="float: right ; "></button>
+                {% endif %}
+				<button title="{{ 'form.save'|trans({}, 'BusybeeHomeBundle')}}" type="submit" class="halflings halflings-save btn btn-success" style="float: right"></button>
 				</h3>
 			</div>
 			<div class="panel-body">
