--- a/src/Busybee/PersonBundle/Resources/views/Address/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/edit.html.twig
@@ -54,6 +54,11 @@
 						{{ form_row(form.streetName) }}
 					</div>
 				</div>
+				<div class='row'>
+					<div class="col-sm-12 alert alert-info">
+                        {{ 'address.help.manage'|trans }}
+					</div>
+				</div>
 			</div>
 			<div class="container-fluid">
 				<div class='row' id="localityMessage{{ classSuffix }}" style="display: none;">
