--- a/src/Busybee/PersonBundle/Resources/views/Address/script.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/script.html.twig
@@ -37,6 +37,7 @@
 				url: '{{ path('address_edit') }}',	
 				data: {
 					'id': $('.beeAddressValue{{ classSuffix }}').val(),
+                    '_token': '{{ form._token.vars.value }}',
 					'propertyName': $('.beePropertyName{{ classSuffix }}').val(),
 					'streetName': $('.beeStreetName{{ classSuffix }}').val(),
 					'streetNumber': $('.beeStreetNumber{{ classSuffix }}').val(),
